<resources>
    <string name="app_name">Teacher Assistant</string>
    <string name="create_class">Create Class</string>
    <string name="start_survey">Start Survey</string>
    <string name="show_results">Show Results</string>
    <string name="add_student">Add Student</string>
    <string name="name">Name:</string>
    <string name="take_pic">Take picture</string>
    <string name="browse">Browse</string>
    <string name="delete_student">Delete Student</string>
    <string name="Back">Back</string>
    <string name="Done">Done</string>
    <string name="use_pic">Use this pic</string>
    <string name="class_name">Class name:</string>
    <string name="image">image_fragment</string>
    <string name="Submit">submit</string>
    <string name="leftout">Left Out Students</string>
    <string name="Delete_All">Delete All</string>

</resources>
