<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nursery"
    tools:context=".create_class">

    <Button
        android:id="@+id/add_student_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_student"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/show_results_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/create_class_list"
        style="@style/AppTheme"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layerType="none"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_student_btn" >

    </ListView>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_class_list">

        <Button
            android:id="@+id/delete_student_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="0.2"
            android:text="@string/delete_student"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_marginRight="10sp"
            android:layout_weight="0.2"
            android:text="@string/Delete_All"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/class_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10sp"
            android:layout_marginLeft="10sp"
            android:layout_weight="0.2"
            android:foregroundGravity="bottom"
            android:text="@string/Done"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>